2022-11-14T08:21:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3459680977 # 612
* notice: last 14d: unq all: 1 7
* notice: prev accum: outdated-unq outdated-all / unq all: 247 447 / 251 454
* notice: next accum: outdated-unq outdated-all / unq all: 247 447 / 252 454
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-31 2022-11-14]

2022-11-14T01:21:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3457801104 # 611
* notice: last 14d: unq all: 1 7
* notice: prev accum: outdated-unq outdated-all / unq all: 239 438 / 249 452
* notice: next accum: outdated-unq outdated-all / unq all: 247 447 / 251 454
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-10-30] / [2022-11-13]

2022-11-13T16:21:01Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3456022059 # 610
* notice: last 14d: unq all: 8 14
* notice: prev accum: outdated-unq outdated-all / unq all: 239 438 / 250 453
* notice: next accum: outdated-unq outdated-all / unq all: 239 438 / 249 452
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +8 +9 -1 -1 / 7 8
* notice: removed / changed dates: [] / [2022-10-30]

2022-11-13T01:23:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3453308603 # 608
* notice: last 14d: unq all: 8 15
* notice: prev accum: outdated-unq outdated-all / unq all: 238 436 / 250 452
* notice: next accum: outdated-unq outdated-all / unq all: 239 438 / 250 453
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-29] / []

2022-11-12T16:21:18Z: