@@ -1,3 +1,11 @@
+2022-11-14T16:22:58Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3463274208 # 613
+* notice: last 14d: unq all: 1 6
+* notice: prev accum: outdated-unq outdated-all / unq all: 247 447 / 252 454
+* notice: next accum: outdated-unq outdated-all / unq all: 247 447 / 252 453
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -2 / 1 1
+* notice: removed / changed dates: [] / [2022-10-31]
+
 2022-11-14T08:21:26Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3459680977 # 612
 * notice: last 14d: unq all: 1 7
